correct code for cart item